--- a/Pharmacy Project.ipynb
+++ b/Pharmacy Project.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Number of Sales Per Gender**"
+    "#### **Number of Sales Per Gender**"
    ]
   },
   {
@@ -84,21 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Total Sales Per Product Category**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src='images/Top Sales.png' width='600'>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### **Number of Sales Per Product Category**"
+    "<img src='images/Top Sales.png'>"
    ]
   },
   {
@@ -120,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Top 5 Customer Rated Brands**"
+    "#### **Top 5 Customer Rated Brands**"
    ]
   },
   {
